--- a/views/index.jade
+++ b/views/index.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title} SB
+  p Welcome to #{title}
   code.
     request: {
     "bank_number":XXXX,
